--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Adam Jensen</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<h1>Su Pengchao</h1>
+						<p>I am a slow walker &nbsp;&bull;&nbsp; But I never walk backwards &nbsp;&bull;&nbsp; The man who has made up his mind to win will never say "impossible"</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
