--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="https://github.com/supengchao" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="spc1459384963@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="mailto:spc1459384963@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<span class="copyright">&copy; Untitled. Design: <a href="https://github.com/supengchao">SPC</a>.</span>
 					</footer>
 
 			</div>
