--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<p>I am a slow walker &nbsp;&bull;&nbsp; But I never walk backwards &nbsp;&bull;&nbsp; The man who has made up his mind to win will never say "impossible"</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							        <!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+								<!--<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>-->
 								<li><a href="http://7xs1cr.com1.z0.glb.clouddn.com/707226577315155999.jpg" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="https://github.com/supengchao" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:spc1459384963@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
