--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							        <!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
 								<!--<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>-->
 								<li><a href="https://github.com/supengchao/supengchao.github.io/blob/master/%E8%8B%8F%E9%B9%8F%E8%B6%85%E7%9A%84%E5%8D%9A%E5%AE%A2.md" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="ak133094273807591://" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/supengchao" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:spc1459384963@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
